--- a/events.html
+++ b/events.html
@@ -283,7 +283,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/cultural/spectacolo.png">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -319,7 +319,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/cultural/fire_n_ice.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -475,7 +475,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/fun/miute_to_win.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -615,7 +615,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/fun/e_gaming.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
