--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
                         <img src="images/gallery_images/img7.JPG" alt="">
 
                         <!-- Example image with link -->
-                        <a target="_blank" href="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg">
+                        <a href="javascript:void(0)">
                             <img src="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
                         </a>
 
