--- a/events.html
+++ b/events.html
@@ -208,7 +208,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/cultural/encan.png">
+                                    <img class="item-img" src="images/cultural/encan.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -364,7 +364,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/fun/task_scav.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -399,7 +399,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/fun/e_auc.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -439,7 +439,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/fun/laser_maze.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -508,7 +508,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/fun/gully_cricket.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -737,7 +737,7 @@
                         </div>
 
                     </div>
-                    <div class="col-md-6 col-sm-12 col-lg-4 my-5 offset-md-3 offset-lg-0  px-0">
+                    <!-- <div class="col-md-6 col-sm-12 col-lg-4 my-5 offset-md-3 offset-lg-0  px-0">
                         <div id="dialog-t3" class="opener event-card-holder">
                             <div class="event-card ">
                                 <div class="item1 "></div>
@@ -776,11 +776,52 @@
                             </div>
                         </div>
 
+                    </div> -->
+                    <div class="col-md-6 col-sm-12 col-lg-4 my-5 offset-md-3 offset-lg-0  px-0">
+                        <div id="dialog-t3" class="opener event-card-holder">
+                            <div class="event-card ">
+                                <div class="item1 "></div>
+                                <div class="item2 "></div>
+                                <div class="item3 "></div>
+                                <div class="item4 "></div>
+                                <div class="item5">
+                                    <img class="item-img" src="images/technical/chankya_neeti.jpg">
+                                    <div class="item9"></div>
+                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                </div>
+
+                                <div class="item6 "></div>
+                                <div class="item7 "></div>
+                                <div class="item8 "></div>
+                            </div>
+                            <div class="event-card-title" data-wow-delay="0.5s">
+                                Chanakya Neeti
+                            </div>
+                            <div id="dialog-t3-c" class="dlg">
+                                <br>
+                                <div class="ui-widget-content title sticky-top"> Chanakya Neeti </div>
+                                <br>
+                                <div class="ui-widget-content content">
+                                    <p></p>
+                                    <p class=" para-dlg-2"> We have all seen an episode of CSI or Law and Order, read a John Grisham book,or listen to atrue crime podcast and though, "yeah, I could do that, I could solve the case". </p>
+                                    <p class=" para-dlg-2"> If you want to take your passion of mystry beyond reading books and listen to podcast we have same good news.</p>
+                                    <p class=" para-dlg-3">Specification:</p>
+                                    <p class=" para-dlg-2">They will be some questions for which participants have to write the code. The judgement will be based on the progress and performance of code. Step marking is allowed and the one with highest points will win.</p>
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>No of pariticipants-1</li>
+                                        <li> Time:1 hr </li>
+                                        <li>Use of internet is prohibited.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
                 <div class="row">
-                    <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
+                    <!-- <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
                         <div id="dialog-t4" class="opener event-card-holder">
                             <div class="event-card ">
                                 <div class="item1 "></div>
@@ -803,6 +844,49 @@
                             <div id="dialog-t4-c" class="dlg">
                                 <br>
                                 <div class="ui-widget-content title sticky-top">Fast and Curious </div>
+                                <br>
+                                <div class="ui-widget-content content">
+                                    <p></p>
+                                    <p class=" para-dlg-2">This event is to test programmers ability to improve the performance of a code. Points will be rewarded on the basis of what they change in the program and how much it reduces the running time of the program.</p>
+                                    <p class=" para-dlg-3">Specification:</p>
+                                    <p class=" para-dlg-2">Some pre-written programs will be provided each with a scope of improvement. Participants can make any changes to program unless the output remains logically correct. This event will be an only c-programming event and
+                                        the compiler used will be gcc.</p>
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Participants per team-maximum 2</li>
+                                        <li>Only C language.</li>
+                                        <li>Only gcc compiler.</li>
+                                        <li> Time: 1 hr.</li>
+                                        <li>Use of internet is prohibited.</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
+                    <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
+                        <div id="dialog-t4" class="opener event-card-holder">
+                            <div class="event-card ">
+                                <div class="item1 "></div>
+                                <div class="item2 "></div>
+                                <div class="item3 "></div>
+                                <div class="item4 "></div>
+                                <div class="item5">
+                                    <img class="item-img" src="images/technical/fast_and_curious.jpg">
+                                    <div class="item9"></div>
+                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                </div>
+
+                                <div class="item6 "></div>
+                                <div class="item7 "></div>
+                                <div class="item8 "></div>
+                            </div>
+                            <div class="event-card-title" data-wow-delay="0.5s">
+                                Tech Fresh
+                            </div>
+                            <div id="dialog-t4-c" class="dlg">
+                                <br>
+                                <div class="ui-widget-content title sticky-top">Tech Fresh </div>
                                 <br>
                                 <div class="ui-widget-content content">
                                     <p></p>
