--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
                         <img src="images/gallery_images/img4.JPG" alt="">
                         <img src="images/gallery_images/img5.JPG" alt="">
                         <img src="images/gallery_images/img6.JPG" alt="">
-                        <img src="images/gallery_images/img2.png" alt="">
+                        <img src="images/gallery_images/img2.jpg" alt="">
                         <img src="images/gallery_images/img7.JPG" alt="">
 
                         <!-- Example image with link -->
