--- a/sponsor.html
+++ b/sponsor.html
@@ -64,9 +64,9 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3 col-sm-12 col-lg-4 offset-lg-4">
                     <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/ntpc.png" alt="">
+                        <img class="sponsor-image" src="images/sponsors/nalco.jpg" alt="">
                         <div class="sponsor-name">
-                            NTPC
+                            NALCO
                         </div>
                     </div>
                 </div>
@@ -75,24 +75,24 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/nalco.jpg" alt="">
+                        <img class="sponsor-image" src="images/sponsors/ntpc.png" alt="">
                         <div class="sponsor-name">
-                            NALCO
+                            NTPC
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/studio11.png" alt="">
+                        <img class="sponsor-image" src="images/sponsors/bharat_petroleum.png" alt="">
                         <div class="sponsor-name">
-                            STUDIO 11
+                            BHARAT PETROLEUM
                         </div>
                     </div>
                 </div>
 
             </div>
             <!-- row 3 -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/cineplexx.png" alt="">
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- row 4 -->
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
@@ -141,15 +141,15 @@
                 </div>
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/modi.jpg" alt="">
+                        <img class="sponsor-image" src="images/sponsors/salaam_namaste.png" alt="">
                         <div class="sponsor-name">
-                            MODI COLLECTION
+                            SALAAM NAMASTE
                         </div>
                     </div>
                 </div>
             </div>
             <!-- row 6 -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/cricketscafe.jpg" alt="">
@@ -166,9 +166,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- row 7 -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/b21.png" alt="">
@@ -185,14 +185,34 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- rpw 8 -->
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/bocca.png" alt="">
+                        <img class="sponsor-image" src="images/sponsors/richard.jpg" alt="">
                         <div class="sponsor-name">
-                            BOCCACAFE
+                            RICHARDS SALON & SPA
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/naturals.jpg" alt="">
+                        <div class="sponsor-name">
+                            NATURALS
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- row 9 -->
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/greentrends.png" alt="">
+                        <div class="sponsor-name">
+                            GREENTRENDS
                         </div>
                     </div>
                 </div>
@@ -205,24 +225,24 @@
                     </div>
                 </div>
             </div>
-            <!-- row 9 -->
+            <!-- ROW 10 -->
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/richard.jpg" alt="">
+                        <img class="sponsor-image" src="images/sponsors/studio11.png" alt="">
                         <div class="sponsor-name">
-                            RICHARDS SALON & SPA
+                            STUDIO 11
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+                <!-- <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/mcl.png" alt="">
+                        <img class="sponsor-image" src="images/sponsors/khaloji.png" alt="">
                         <div class="sponsor-name">
-                            MCL
+                            KHALO JII
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </div>
