--- a/events.html
+++ b/events.html
@@ -74,7 +74,7 @@
         </nav>
 
 
-        <div id="events" style="width: 100%;height: auto;background: linear-gradient(to right bottom, rgb(34, 0, 0), rgb(109, 0, 103));padding: 10vh 5%;min-height: 100vh;">
+        <div id="events" style="width: 100%;height: auto;background: linear-gradient(to right bottom, rgb(8, 0,34), rgb(78, 0, 74));padding: 10vh 5%;min-height: 100vh;">
 
             <br>
             <br>
@@ -248,7 +248,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/encan.jpg">
+                                    <img class="item-img" src="images/cultural/nukkad_natak.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -582,7 +582,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/fun/follow_my_steps.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
