about us photos

--- a/events.html
+++ b/events.html
@@ -637,6 +637,7 @@
                                         <li>FIFA</li>
                                         <li>Mobile Legends</li>
                                         <li>CS Go</li>
+                                        <li>COD</li>
                                     </ol>
                                 </div>
 
@@ -803,11 +804,12 @@
                                 <br>
                                 <div class="ui-widget-content content">
                                     <p></p>
-                                    <p class=" para-dlg-2"> We have all seen an episode of CSI or Law and Order, read a John Grisham book,or listen to atrue crime podcast and though, "yeah, I could do that, I could solve the case". </p>
-                                    <p class=" para-dlg-2"> If you want to take your passion of mystry beyond reading books and listen to podcast we have same good news.</p>
-                                    <p class=" para-dlg-3">Specification:</p>
-                                    <p class=" para-dlg-2">They will be some questions for which participants have to write the code. The judgement will be based on the progress and performance of code. Step marking is allowed and the one with highest points will win.</p>
-                                    <p class=" para-dlg-3">Rules:</p>
+                                    <p class=" para-dlg-2"> We have all seen an episode of CSI or Law and Order, read a John Grisham book, or listen to a true-crime podcast and thought, "yeah, I could do that, I could solve the case".</p>
+                                    <p class=" para-dlg-2"> If you want to take your passion for mystery beyond reading books and listen to the podcast we have some good news.</p>
+                                    <p class=" para-dlg-2"> Use your detective instincts and common sense to solve the 10 real-life problems within a given time frame. </p>
+                                    <p class=" para-dlg-2"> Come Decrypt, Defuse, Decode and Survive. </p>
+                                    <p class=" para-dlg-3">Rule & Regulation</p>
+
                                     <ul class=" para-dlg-4">
                                         <li>No of pariticipants-1</li>
                                         <li> Time:1 hr </li>
@@ -872,7 +874,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/technical/fast_and_curious.jpg">
+                                    <img class="item-img" src="images/technical/tech_fresh.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -890,17 +892,17 @@
                                 <br>
                                 <div class="ui-widget-content content">
                                     <p></p>
-                                    <p class=" para-dlg-2">This event is to test programmers ability to improve the performance of a code. Points will be rewarded on the basis of what they change in the program and how much it reduces the running time of the program.</p>
-                                    <p class=" para-dlg-3">Specification:</p>
-                                    <p class=" para-dlg-2">Some pre-written programs will be provided each with a scope of improvement. Participants can make any changes to program unless the output remains logically correct. This event will be an only c-programming event and
-                                        the compiler used will be gcc.</p>
-                                    <p class=" para-dlg-3">Rules:</p>
+                                    <p class=" para-dlg-2">If you are looking for a lively event humming with the energy of sparked-up brain working together, your destination is here!</p>
+                                    <p class=" para-dlg-3">Round 1: Test your wits</p>
+                                    <p class=" para-dlg-2">Participants are tested by an aptitude test to examine the basic understanding of problems.</p>
+                                    <p class=" para-dlg-3">Round 2: Think out of box</p>
+                                    <p class=" para-dlg-2">You will be given puzzles which you are expected to decode with given constraints. Each puzzle solved will put you ahead in the race, feeling the heart right!!!</p>
+                                    <p class=" para-dlg-3">Rule & Regulation</p>
                                     <ul class=" para-dlg-4">
-                                        <li>Participants per team-maximum 2</li>
-                                        <li>Only C language.</li>
-                                        <li>Only gcc compiler.</li>
-                                        <li> Time: 1 hr.</li>
-                                        <li>Use of internet is prohibited.</li>
+                                        <li>Registration procedure will be online.</li>
+                                        <li>Limited number of spot registration.</li>
+                                        <li>Students can register in a team of three.</li>
+                                        <li>Open to all branches.</li>
                                     </ul>
 
                                 </div>
