--- a/contactus.html
+++ b/contactus.html
@@ -217,7 +217,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us bounce-in-fwd">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Aradhana Behera.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Aradhana Behera</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -272,7 +272,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Azazul Haque.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Azazul Haque</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -353,7 +353,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Andhavarapu Supriya.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Andhavarapu Supriya</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -487,7 +487,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Gayatri Jena.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Gayatri Jena</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -554,7 +554,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Sonali Mishra.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Sonali Mishra</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -622,7 +622,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Monalisa Sahoo.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Monalisha Sahoo</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -677,7 +677,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Shiba Prasad Mallick.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Shiba Prasad Mallick</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -745,7 +745,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Maitri Ranjan Behera.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Maitri Ranjan Behera</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -894,7 +894,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Debasmita Debadarshinj.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title doadjust">Debasmita Debadarshini</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -962,7 +962,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Moumita Panda.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Moumita Panda</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -1302,7 +1302,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Rozaleen Satpaty.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Rozaleen Satpathy</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
