about us image added

--- a/contactus.html
+++ b/contactus.html
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us bounce-in-fwd">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/teachers/sanjay_patra.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title doadjust">Prof. Sanjay Ku. Patra</div>
                                         <div class=" card-contactus sub-title">Convenor</div>
@@ -135,7 +135,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us bounce-in-fwd">
-                                        <img class="card-contactus image" src="images/" alt="">
+                                        <img class="card-contactus image" src="images/teachers/biswanath_sethi.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title doadjust">Prof. Biswanath Sethi</div>
                                         <div class=" card-contactus sub-title">Faculty Coordinator</div>
@@ -165,7 +165,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us bounce-in-fwd">
-                                        <img class="card-contactus image" src="images" alt="">
+                                        <img class="card-contactus image" src="images/teachers/susant_sahoo.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title doadjust">Prof. Susant Ku. Sahoo</div>
                                         <div class=" card-contactus sub-title">Faculty Coordinator</div>
@@ -285,7 +285,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/neha_rai.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Neha Rai</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -407,7 +407,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/soumya_ranjan_naik.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Soumya Ranjan Naik</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -420,7 +420,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/shrutismita_naik.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Srutismita Naik</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -474,7 +474,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/ashutosh_adhikari.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Asutosh Das Adhikari</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -541,7 +541,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/md_azaruddin.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Md. Azharuddin</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -1030,7 +1030,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/sonali_rashmirekha.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Sonali Rashmirekha</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -1166,7 +1166,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/Smruti_Swagatika.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Smruti Swagatika</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -1234,7 +1234,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/ashmita_dora.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Ashmita Dora</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -1289,7 +1289,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/sibaram_sahoo.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Sibaram Sahoo</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
