--- a/events.html
+++ b/events.html
@@ -543,7 +543,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/music_event.jpg">
+                                    <img class="item-img" src="images/fun/e-roadies.jpeg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
