--- a/contactus.html
+++ b/contactus.html
@@ -204,7 +204,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us bounce-in-fwd">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/sankalp_rath.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Sankalp Rath</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -1017,7 +1017,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/debasis_moharana.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Debashish Maharana</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
@@ -1098,7 +1098,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/monalisa_giri.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Monalisa Giri</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
