all images added (contact us)

--- a/contactus.html
+++ b/contactus.html
@@ -1085,7 +1085,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/contactus-img.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/sekhar_das.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Sekhar Das</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
